<resources>
    <string name="app_name">FmlApp</string>
    <string name="main">Главная</string>
    <string name="services">Заметки</string>
    <string name="notifications">Уведомления</string>
    <string name="profile">Профиль</string>
    <string name="samplename"><i> </i></string>
    <string name="profiledescription"><b><i>О СЕБЕ</i></b></string>
    <string name="posts">СТАТЬИ</string>
    <string name="subscribed">ПОДПИСКИ</string>
    <string name="subscribers">ПОДПИСАНО</string>
    <string name="likes">НРАВИТСЯ</string>
    <string name="comments">КОММЕНТАРИИ</string>
    <string name="validnumber"> </string>
    <string name="details_description">Нет данных</string>
    <string name="empty_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        Phasellus rutrum, sem nec aliquet consequat, mauris odio pretium diam, sed ullamcorper
        purus leo vestibulum nisi. Morbi mollis quis mauris id pellentesque. Nunc blandit nibh
        at diam hendrerit iaculis. Nunc rhoncus pellentesque metus, non imperdiet enim. Vivamus
        sodales id nisi ut sodales. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        Morbi ipsum massa, maximus ut placerat quis, rhoncus non magna.</string>
    <string name="enter">Войти</string>
    <string name="password">Пароль</string>
    <string name="emailphone">Email</string>
    <string name="register">Создать новую учетную запись</string>
    <string name="register_lbl">Регистрация</string>
    <string name="register_hint">Ваш Email будет использоваться для входа в аккаунт</string>
    <string name="register_main_hint">Введите данные</string>
    <string name="register_lbl_btn">Зарегистрироваться</string>
    <string name="lbl_auth">Авторизация</string>
    <string name="changebtn_phone">+7</string>
    <string name="changebtn_email">@</string>
    <string name="phone">Номер телефона</string>
    <string name="email">Эл. почта</string>
    <string name="add_comm">Добавить комментарий</string>
    <string name="add_notify">Добавить уведомление</string>
    <string name="add_news">Добавить статью</string>
    <string name="add_tag">Добавить тэг</string>
    <string name="settings">Настройки</string>
    <string name="create">Создать</string>
    <string name="cancel">Отмена</string>
    <string name="title_name">Название статьи</string>
    <string name="content">Содержание</string>
    <string name="url_image">URL изображения</string>
    <string name="comment">Комментарий</string>
    <string name="exit">Выйти из аккаунта</string>
</resources>