<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_news">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:scaleType="center"
        android:background="@color/darkteal"
        android:contentDescription="@string/app_name" />
    <EditText
        android:id="@+id/news_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/title_name" />
    <EditText
        android:id="@+id/news_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:hint="@string/content"/>
<!--    <EditText-->
<!--        android:id="@+id/news_url"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="4dp"-->
<!--        android:layout_marginLeft="4dp"-->
<!--        android:layout_marginRight="4dp"-->
<!--        android:layout_marginBottom="16dp"-->
<!--        android:fontFamily="sans-serif"-->
<!--        android:hint="@string/url_image"/>-->
</LinearLayout>