<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/official_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/launch_screen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/register_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_lbl"
        android:gravity="center"
        android:textColor="@color/darkteal"
        style="@android:style/TextAppearance.DeviceDefault.Large"
        app:layout_constraintBottom_toTopOf="@+id/cardregister"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/enter_the_content"
        style="@android:style/TextAppearance.DeviceDefault.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/register_main_hint"
        android:layout_margin="10dp"
        android:textColor="@color/teal_700"
        app:layout_constraintBottom_toTopOf="@+id/enter_the_content2" />

    <TextView
        android:id="@+id/enter_the_content2"
        style="@android:style/TextAppearance.DeviceDefault.Small"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/register_hint"
        android:layout_marginBottom="10dp"
        android:textColor="@color/tealgray"
        app:layout_constraintBottom_toTopOf="@+id/cardregister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardregister"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="20dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/official_image"
        tools:layout_editor_absoluteX="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/loginchanger"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:text="@string/changebtn_phone"
                    android:layout_gravity="center"
                    style="@android:style/TextAppearance.DeviceDefault.Large"
                    android:textColor="@color/darkteal"/>
                <LinearLayout
                    android:layout_width="1.5dp"
                    android:layout_height="match_parent"
                    android:background="@color/darkteal"
                    android:layout_marginVertical="5dp"/>
                <EditText
                    android:id="@+id/emailnum"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginBottom="1dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:hint="@string/phone"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:textColorHint="@color/darkgray" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/teal_700"/>
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="1dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColorHint="@color/darkgray" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardgetcode"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        app:cardCornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardregister"
        tools:layout_editor_absoluteX="20dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/getcode"
            style="@android:style/TextAppearance.DeviceDefault.Medium"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/teal_700"
            android:text="@string/register_lbl_btn"
            android:textColor="@color/white" />
    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>