<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/official_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/launch_screen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardauth"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="20dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/official_image"
        tools:layout_editor_absoluteX="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/emailnum"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:hint="@string/emailphone"
                android:maxLines="1"
                android:textColorHint="@color/darkgray"
                android:background="@color/white"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="5dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/teal_700"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:hint="@string/password"
                android:maxLines="1"
                android:textColorHint="@color/darkgray"
                android:background="@color/white"
                android:layout_marginTop="1dp"
                android:layout_marginLeft="5dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/cardenter"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        app:cardCornerRadius="30dp"
        app:layout_constraintTop_toBottomOf="@+id/cardauth">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/enterbtn"
            android:layout_width="match_parent"
            style="@android:style/TextAppearance.DeviceDefault.Medium"
            android:layout_height="match_parent"
            android:text="@string/enter"
            android:textColor="@color/white"
            android:background="@color/teal_700"/>
    </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@android:style/TextAppearance.DeviceDefault.Medium"
        android:layout_margin="20dp"
        android:textColor="@color/teal_700"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardenter" />

</androidx.constraintlayout.widget.ConstraintLayout>