<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/horizontalScrollView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="none">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <androidx.cardview.widget.CardView
            android:id="@+id/posts"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp">

                <TextView
                    android:id="@+id/posts_count"
                    style="@android:style/TextAppearance.DeviceDefault.Large"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/validnumber"
                    android:textAlignment="center"
                    android:textColor="@color/darkteal"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    style="@android:style/TextAppearance.DeviceDefault.Small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/posts"
                    android:textAlignment="center"
                    android:textColor="@color/gray"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/posts_count" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/subscribed"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toEndOf="@+id/posts">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp">

                <TextView
                    android:id="@+id/subscribed_count"
                    style="@android:style/TextAppearance.DeviceDefault.Large"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/validnumber"
                    android:textAlignment="center"
                    android:textColor="@color/darkteal"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    style="@android:style/TextAppearance.DeviceDefault.Small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/subscribed"
                    android:textAlignment="center"
                    android:textColor="@color/gray"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/subscribed_count" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/subscribers"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toEndOf="@+id/subscribed">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp">

                <TextView
                    android:id="@+id/subscribers_count"
                    style="@android:style/TextAppearance.DeviceDefault.Large"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/validnumber"
                    android:textAlignment="center"
                    android:textColor="@color/darkteal"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    style="@android:style/TextAppearance.DeviceDefault.Small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/subscribers"
                    android:textAlignment="center"
                    android:textColor="@color/gray"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/subscribers_count" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/likes"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toEndOf="@+id/subscribers">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp">

                <TextView
                    android:id="@+id/likes_count"
                    style="@android:style/TextAppearance.DeviceDefault.Large"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/validnumber"
                    android:textAlignment="center"
                    android:textColor="@color/darkteal"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    style="@android:style/TextAppearance.DeviceDefault.Small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/likes"
                    android:textAlignment="center"
                    android:textColor="@color/gray"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/likes_count" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/comments"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toEndOf="@+id/likes">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp">

                <TextView
                    android:id="@+id/comments_count"
                    style="@android:style/TextAppearance.DeviceDefault.Large"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/validnumber"
                    android:textAlignment="center"
                    android:textColor="@color/darkteal"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    style="@android:style/TextAppearance.DeviceDefault.Small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/comments"
                    android:textAlignment="center"
                    android:textColor="@color/gray"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/comments_count" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</HorizontalScrollView>
